--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
     <nav>
         <a href="index.html">[home]</a>
-        <a href="about.html">[about]</a>
-        <a href="music.html">[music]</a>
-        <a href="sound.html">[sound design]</a>
+        <a href="undercons.html">[about]</a>
+        <a href="undercons.html">[music]</a>
+        <a href="undercons.html">[sound design]</a>
         <a href="undercons.html">[more]</a>
     </nav>
     <section class="heythere">
