--- a/undercons.html
+++ b/undercons.html
@@ -12,11 +12,15 @@
 
 <body>
     <style>
+        @font-face {
+            font-family: 'Oxanium';
+            src: url(fonts/Oxanium-Light.woff);
+        }
 
         body {
             color: lightgray;
-            font-family: Oxanium;
-            max-width: 1000px;
+            font-family: 'Oxanium';
+            max-width: 50%;
             margin-left: 500px;
             background-color: rgb(6,6,6);
             padding: 10px;
@@ -45,7 +49,7 @@
         }
 
         nav {
-            font-family: Oxanium;
+            font-family: 'Oxanium';
             font-size: 18px;
             padding: 10px;
             text-align: right;
@@ -59,10 +63,10 @@
     </style>
     <nav>
         <a href="index.html">[home]</a>
-        <a href="about.html">[about]</a>
-        <a href="music.html">[music]</a>
-        <a href="sound.html">[sound design]</a>
-        <a href="more.html">[more]</a>
+        <a href="undercons.html">[about]</a>
+        <a href="undercons.html">[music]</a>
+        <a href="undercons.html">[sound design]</a>
+        <a href="undercons.html">[more]</a>
     </nav>
 
     <div class="logo">
