--- a/undercons.html
+++ b/undercons.html
@@ -20,8 +20,8 @@
         body {
             color: lightgray;
             font-family: 'Oxanium';
-            max-width: 50%;
-            margin-left: 500px;
+            max-width: 60rem;
+            margin-left: 30rem;
             background-color: rgb(6,6,6);
             padding: 10px;
             text-align: center;
@@ -53,7 +53,6 @@
             font-size: 18px;
             padding: 10px;
             text-align: right;
-            position: sticky;
         }
 
         .logo {
