rem changes again

--- a/undercons.html
+++ b/undercons.html
@@ -20,10 +20,12 @@
         body {
             color: lightgray;
             font-family: 'Oxanium';
-            max-width: 60rem;
-            margin-left: 30rem;
-            background-color: rgb(6,6,6);
-            padding: 10px;
+            font-size: 1rem;
+            max-width: 62rem;
+            margin-left: 31rem;
+            background-size: 100%;
+            background-color: #060606;
+            padding: 0.6rem;
             text-align: center;
         }
 
@@ -50,8 +52,8 @@
 
         nav {
             font-family: 'Oxanium';
-            font-size: 18px;
-            padding: 10px;
+            font-size: 1.125rem;
+            padding: 0.6rem;
             text-align: right;
         }
 
