--- a/index.html
+++ b/index.html
@@ -7,11 +7,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="game, composer, music, sound, asli, aslı, karayel">
     <meta name="description" content="hey there, i'm a composer & sound designer for games.">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico"
+    <link rel="stylesheet" href="newstyle.css">
+    <link rel="shortcut icon" href="img/favicon.ico"
 </head>
 
 <body>
+    <style>
+        @font-face {
+            font-family: 'Oxanium';
+            src: url(fonts/Oxanium-Light.woff);
+        }
+
+
+        body {
+            color: lightgray;
+            font-family: 'Oxanium';
+            font-size: 1rem;
+            max-width: 60rem;
+            margin-left: 30rem;
+            background-size: 100%;
+            background-color: #060606;
+            padding: 0.6rem;
+            text-align: center;
+        }
+
+        a:link {
+            color: turquoise;
+            text-decoration: none;
+        }
+
+        a:visited {
+            color: turquoise;
+            background-color: transparent;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: indianred;
+            text-decoration: underline;
+        }
+
+        a:active {
+            color: yellow;
+            text-decoration: underline;
+        }
+
+        .logo {
+            display: flex;
+            justify-content: right;
+        }
+
+        nav {
+            font-family: 'Oxanium';
+            font-size: 1.125rem;
+            padding: 0.6rem;
+            text-align: right;
+        }
+
+        .videos {
+            display: flex;
+            justify-content: space-evenly;
+        }
+
+        .video-container {
+            padding: 0.3rem;
+        }
+
+        .video-container2 {
+            padding: 0.3rem;
+        }
+
+        .intro {
+            color: lightgray;
+            display: flex;
+            font-size: 1rem;
+        }
+
+        .heythere {
+            display: flex;
+            justify-content: space-evenly;
+        }
+
+        .credit {
+            color: lightgray;
+            font-size: 0.85rem;
+        }
+
+    </style>
     <nav>
         <a href="index.html">[home]</a>
         <a href="undercons.html">[about]</a>
@@ -38,7 +120,7 @@
 
         <section>
             <div class="logo">
-                <img src="turq.png" width="450" height="300" />
+                <img src="img/turq.png" width="450" height="300" />
             </div>
             <div class="credit">
                 <p>logo by <a href="https://mattcolewilson.com/index.html" target="_blank">matt cole wilson</a></p>
