--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 </head>
 
 <body>
+    <style>         
+        @font-face {
+            font-family: 'Oxanium';
+            src: url(fonts/Oxanium-Light.woff);
+        }
+    </style>
     <nav>
         <a href="index.html">[home]</a>
         <a href="undercons.html">[about]</a>
