--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
     </section>
     <section class="videos">
         <div class="video-container">
-            <iframe width="500" height="400" src="https://www.youtube.com/embed/54cjYmV8DyI"
+            <iframe width="500" height="400" align="left" src="https://www.youtube.com/embed/54cjYmV8DyI"
                     title="Cannibalistic Nuclear Bunker Ants OST" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
         </div>
         <div class="video-container2">
-            <iframe width="500" height="400" src="https://www.youtube.com/embed/BOaT-HOP6sg" title="Sound Design Reel 2021 - Aslı Karayel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            <iframe width="500" height="400" align="left" src="https://www.youtube.com/embed/BOaT-HOP6sg" title="Sound Design Reel 2021 - Aslı Karayel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                     allowfullscreen></iframe>
         </div>
     </section>
