--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
     <nav>
         <a href="index.html">[home]</a>
-        <a href="undercons.html">[about]</a>
+        <a href="about.html">[about]</a>
         <a href="undercons.html">[music]</a>
         <a href="undercons.html">[sound design]</a>
         <a href="undercons.html">[more]</a>
