--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav>
         <a href="index.html">[home]</a>
         <a href="about.html">[about]</a>
-        <a href="undercons.html">[music]</a>
+        <a href="music.html">[music]</a>
         <a href="undercons.html">[sound design]</a>
         <a href="undercons.html">[more]</a>
     </nav>
