--- a/music.html
+++ b/music.html
@@ -23,7 +23,7 @@
         <a href="about.html">[about]</a>
         <a href="music.html">[music]</a>
         <a href="undercons.html">[sound design]</a>
-        <a href="undercons.html">[more]</a>
+        <a href="more.html">[more]</a>
     </nav>
 <section class="grid">
     <!-- <p align="left"> > october 2022 - sound & music for a local game jam</p> <br> -->
