--- a/undercons.html
+++ b/undercons.html
@@ -23,7 +23,7 @@
         <a href="about.html">[about]</a>
         <a href="music.html">[music]</a>
         <a href="undercons.html">[sound design]</a>
-        <a href="undercons.html">[more]</a>
+        <a href="more.html">[more]</a>
     </nav>
     <div class="logo">
         <img src="img/synthster-crt-transparent.gif" min-width="800" height="300"/>
