--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <a href="about.html">[about]</a>
         <a href="music.html">[music]</a>
         <a href="undercons.html">[sound design]</a>
-        <a href="undercons.html">[more]</a>
+        <a href="more.html">[more]</a>
     </nav>
     
     
