--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                 <br>
                 > professional sound designer and a composer at taleworlds entertainment.<br>
                 <br>
-                > was selected for <a href="https://www.igdafoundation.org/2021-scholars/">IGDA's diverse game developers exchange program in 2021</a>. <br>
+                > was selected for <a href="https://www.igdafoundation.org/2021-scholars/" target="_blank">IGDA's diverse game developers exchange program in 2021</a>. <br>
                 <br>
                 > like to write, make music, play tabletop rpgs, do sound, play chess, figure skate, volley ball and make games. <br>
                 <br>
