--- a/more.html
+++ b/more.html
@@ -32,7 +32,7 @@
         <p class="tags"> march 2022 - talk <br>
         <b>"how to slay the dragon: damsel's guide"</b><br>
         <img src="img/talk.jpg" width="700" height="350"> <br>
-        organiser: <a href="https://twitter.com/FemDevsMeetup/status/1503685559537000448?s=20">FemDevsMeetup (Ubisoft)</a><br></p>
+        organiser: <a href="https://twitter.com/FemDevsMeetup/status/1503685559537000448?s=20" target="_blank">FemDevsMeetup (Ubisoft)</a><br></p>
         <br>
         
         <p>> i did a workshop. it wasn't stressful at all.</p>
