change some texts on about, music and more

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <p align="left">
                 > hi! <br>
                 <br>
-                > be me - aslı karayel (she/her). <br>
+                > aslı karayel (she/her). <br>
                 <br>
                 > born in kocaeli, türkiye (or turkey). <br>
                 <br>
@@ -45,8 +45,6 @@
                 <br>
                 <img src="img/turq3.png" width="80" height="80"> <br>
                 > i made this logo with the help of <a href="https://mattcolewilson.com/index.html" target="_blank">matt cole wilson</a> whose website was so fascinating that it made me learn html/css. art & design are very powerful. i know everyone else thought this already but i truly comprehended it recently. <br>
-                <br>
-                > i was worried about going for a more casual tone in this webbed site because my previous one was solely focused on making me seem like a Big Girl. but i realised it didn't matter as much as i thought and the work spoke for itself (questionable Big Girl). <br>
                 <br>
                 gmail: <a href="mailto:synthstermusic@gmail.com" target="_blank">synthstermusic</a><br>
                 discord: synthster#6509 <br>
