--- a/more.html
+++ b/more.html
@@ -37,7 +37,7 @@
         
         <p>> i did a workshop. it wasn't stressful at all.</p>
         <p class="tags">april 2022 - workshop <br>
-        <b>"oyunlar için ses ve müzik üretimi"</b> <br>
+        <b>"oyunlar için müzik ve ses üretimi"</b> <br>
         <iframe width="700" height="400" src="https://www.youtube.com/embed/698iAHoLmS4" title="Oyunlar İçin Müzik ve Ses Üretimi | Aslı Karayel" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br>
         organiser: İTÜ OTG<br></p>
         
