--- a/undercons.html
+++ b/undercons.html
@@ -28,7 +28,7 @@
     <div class="logo">
         <img src="img/synthster-crt-transparent.gif" min-width="800" height="300"/>
     </div>
-    <h1>under construction...</h1> 
+    <h1>under construction... too many things...</h1> 
   
 
 
