changed about page

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 > like to write, make music, play tabletop rpgs, do sound, play chess, figure skate, volley ball and make games. <br>
                 <br>
                 <img src="img/turq3.png" width="80" height="80"> <br>
-                > i made this logo with the help of <a href="https://mattcolewilson.com/index.html" target="_blank">matt cole wilson</a> whose website was so fascinating that it made me learn html/css. art & design are very powerful. i know everyone else thought this already but i truly comprehended it recently. <br>
+                > i made this logo with the help of <a href="https://mattcolewilson.com/index.html" target="_blank">matt cole wilson</a> whose website was so fascinating that it made me learn html/css (a little). <br>
                 <br>
                 gmail: <a href="mailto:synthstermusic@gmail.com" target="_blank">synthstermusic</a><br>
                 discord: synthster#6509 <br>
